<resources>
    <string name="app_name">Personas</string>
    <string name="txCedula">N° cedula</string>
    <string name="txNombre">Nombre</string>
    <string name="txApellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>

    <string name="listar_personas">Listar Personas</string>
    <string name="numero">N°</string>
    <string name="listar">Listar</string>
    <string name="crear">Crear</string>
    <string name="crear_persona">Crear Persona</string>
    <string name="error_numero">El campo es requerido</string>

    <string-array name="opciones">
        <item>@string/crear</item>
        <item>@string/listar_personas</item>
    </string-array>

</resources>
